# matsim-actitopp-ch

./: .gitignore  README.md  Trip Length Frequency.ipynb  config.xml  dashboard.py  pom.xml  pyproject.toml  tlf.py
src/main/java/org/matsim/actitopp/: ActiToppActivityTypes.java  ActiToppUtils.java  ActitoppExample.java  ActitoppMatsimDemandGenerator.java  IvtPopulationParser.java  MunicipalityCommutesParser.java  RunActitoppForIvtPopulation.java
src/main/java/org/matsim/analysis/: RunETHEventTrimmer.java  RunETHTripsProcessor.java  RunTripsProcessor.java
src/main/java/org/matsim/run/: RunETHEventTrimmer.java  RunETHTripsProcessor.java  RunMatsim.java  RunMatsimFromConfigFile.java  RunNetworkPruner.java  RunTripsProcessor.java
src/main/java/org/matsim/utils/: RunNetworkPruner.java
src/test/java/org/matsim/run/: HelloWorldTest.java
