[tool.poetry]
name = "dash"
version = "0.1.0"
description = ""
authors = ["Billy Charlton <charlton@tu-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.6"
panel = "^0.7.0"
holoviews = "^1.12.7"
pandas = "^0.25.3"
ipywidgets = "^7.5.1"
dfply = "^0.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
